test/classes/vass/method-def-with-type-binding-error-union-2.good
method-def-with-type-binding-error-union-2.chpl:4: error: Only member methods of the innermost class/record/union (here, "U") are allowed
